Regig and rename

--- a/tutorial/bg_info/tutorial_julesrose/developer_advanced_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/developer_advanced_quiz.html
@@ -11,7 +11,7 @@
         <meta name="description" content="JULES-Rose Tutorial" />
         <meta name="author" content="JULES System Manager" />
         <link rel="icon" href="jules_logo.png" />
-        <title>Advanced Quiz</title>
+        <title>Developer Advanced Quiz</title>
         <!-- Bootstrap core CSS -->
         <link href="../etc/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Bootstrap theme -->
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Advanced Quiz</a>
+                    <a class="navbar-brand" href="#">Developer Advanced Quiz</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -42,13 +42,13 @@
                                 <li class="dropdown-header">Quizzes</li>
 
                                 <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
-                                <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
-                                <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
+                                <li><a href="user_quiz.html">User Quiz</a></li>
+                                <li><a href="developer_quiz.html">Developer Quiz</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Tutorials and practical's</li>
-                                <li><a href="jr_beginner.html">Beginner</a></li>
-                                <li><a href="jr_intermediate.html">Intermediate</a></li>
-                                <li><a href="jr_advanced.html">Advanced</a></li>
+                                <li><a href="jr_user.html">User</a></li>
+                                <li><a href="jr_developer.html">Developer</a></li>
+                                <li><a href="jr_developer advanced.html">Developer Advanced</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
@@ -65,7 +65,7 @@
         </nav>
         <div class="container theme-showcase" role="main">
             <div class="jumbotron">
-                <h2>JULES Advanced quiz</h2>
+                <h2>JULES Developer Advanced quiz</h2>
                 <h3>JULES questions</h3>
                 <br/>
                 The aim of this quiz is to highlight what you have learnt and where you need to develop your learning.
@@ -75,11 +75,11 @@
                 <br/>
                 Please try to attempt all aspects of the quiz, you may be able to do none or all, you don't know until you try.
                 <br/>
-                <h3>Advanced quiz</h3>
+                <h3>Developer Advanced quiz</h3>
                 <div class="well">
                     <div id="results"></div>
                 </div>
-               This quiz is being developed with the Advanced tutorial and is not complete yet.
+               This quiz is being developed with the Developer Advanced tutorial and is not complete yet.
                 <div class="well">
                     <form id="qform" action=".">
                         <ol>
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="container">
-                <p><a class="btn btn-lg btn-success" href="jr_advanced.html" role="button">Advanced course</a></p>
+                <p><a class="btn btn-lg btn-success" href="jr_developer advanced.html" role="button">Developer Advanced course</a></p>
                 <br/>
             </div>
             <div class="container">
