--- a/tutorial/bg_info/tutorial_julesrose/jr_developer_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_developer_advanced.html
@@ -8,7 +8,7 @@
         <meta name="description" content="JULES-Rose Tutorial" />
         <meta name="author" content="JULES System Manager" />
         <link rel="icon" href="jules_logo.png" />
-        <title>JULES-Rose advanced</title>
+        <title>JULES-Rose developer advanced</title>
         <!-- Bootstrap core CSS -->
         <link href="../etc/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Bootstrap theme -->
@@ -27,19 +27,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">JULES Advanced</a>
+                    <a class="navbar-brand" href="#">JULES Developer Advanced</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <!-- Add link to Homepage to training when created -->
                         <li class="active"><a href="#">Home</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Advanced material <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer Advanced material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="dropdown-header">Advanced Tutorials</li>
+                                <li class="dropdown-header">Developer Advanced Tutorials</li>
                                 <li><a href="#umdp3">UMDP3</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Advanced Practical's</li>
+                                <li class="dropdown-header">Developer Advanced Practical's</li>
                                 <li><a href="#arst">Adding rose stem tests</a></li>
                                  <li><a href="#aum">Adding a complex upgrade macro</a></li>
                                 <li><a href="#umjt">UM-JULES tickets</a></li>
@@ -50,14 +50,14 @@
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
                                 <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
-                                <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
+                                <li><a href="user_quiz.html">User Quiz</a></li>
 
-                                <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
-                                <li><a href="advanced_quiz.html">Advanced Quiz</a></li>
+                                <li><a href="developer_quiz.html">Developer Quiz</a></li>
+                                <li><a href="developer advanced_quiz.html">Developer Advanced Quiz</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Tutorials and practical's</li>
-                                <li><a href="jr_beginner.html">Beginner</a></li>
-                                <li><a href="jr_intermediate.html">Intermediate</a></li>
+                                <li><a href="jr_user.html">User</a></li>
+                                <li><a href="jr_developer.html">Developer</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
@@ -74,7 +74,7 @@
         </nav>
         <div class="container theme-showcase" role="main">
         <div class="jumbotron">
-            <h1>Advanced JULES-Rose tutorial (in development)</h1>
+            <h1>Developer Advanced JULES-Rose tutorial (in development)</h1>
             <p>This aims to explain the importance of:
             <ul>
                 <li><a href="#umdp3">UMDP3</a></li>
@@ -91,10 +91,10 @@
             <p>It is expected that you have:
             <ul>
             <li>Completed the <a href="http://metomi.github.io/rose/doc/rose.html">Rose User Guide</a>.</li>
-            <li>Completed the <a href="jr_beginner.html">Beginner Tutorial</a>.</li>
-            <li>Completed the <a href="beginner_quiz.html">Beginner Quiz</a>.</li>
-            <li>Completed the <a href="jr_intermediate.html">Intermediate Tutorial</a>.</li>
-            <li>Completed the <a href="intermediate_quiz.html">Intermediate Quiz</a>.</li>
+            <li>Completed the <a href="jr_user.html">User Tutorial</a>.</li>
+            <li>Completed the <a href="user_quiz.html">User Quiz</a>.</li>
+            <li>Completed the <a href="jr_developer.html">Developer Tutorial</a>.</li>
+            <li>Completed the <a href="developer_quiz.html">Developer Quiz</a>.</li>
             </ul>
             </p>
             <p>
@@ -511,13 +511,13 @@ Resolved conflicted state of 'tree_conflict.txt'
 
             <br/>
 
-            <h3>Congratulations you have completed the Advanced Tutorial!</h3>
+            <h3>Congratulations you have completed the Developer Advanced Tutorial!</h3>
         <br/>
         <div class="container">
         <div class="well">
-        Now lets do the Advanced Quiz to highlight your learning.
+        Now lets do the Developer Advanced Quiz to highlight your learning.
         </div>
-        <p><a class="btn btn-lg btn-success" href="Advanced_quiz.html" role="button">Advanced Quiz</a></p>
+        <p><a class="btn btn-lg btn-success" href="Developer Advanced_quiz.html" role="button">Developer Advanced Quiz</a></p>
         </div>
         <br/>
         <br/>
