--- a/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
@@ -38,14 +38,14 @@
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
                                 <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
-                                <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
-                                <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
-                                <li><a href="advanced_quiz.html">Advanced Quiz</a></li>
+                                <li><a href="user_quiz.html">User Quiz</a></li>
+                                <li><a href="developer_quiz.html">Developer Quiz</a></li>
+                                <li><a href="developer advanced_quiz.html">Developer Advanced Quiz</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Tutorials and practical's</li>
-                                <li><a href="jr_beginner.html">Beginner</a></li>
-                                <li><a href="jr_intermediate.html">Intermediate</a></li>
-                                <li><a href="jr_advanced.html">Advanced</a></li>
+                                <li><a href="jr_user.html">User</a></li>
+                                <li><a href="jr_developer.html">Developer</a></li>
+                                <li><a href="jr_developer advanced.html">Developer Advanced</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_links.html">Links</a></li>
