--- a/tutorial/bg_info/tutorial_julesrose/precourse_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/precourse_quiz.html
@@ -37,14 +37,14 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
-                                <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
-                                <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
-                                <li><a href="advanced_quiz.html">Advanced Quiz</a></li>
+                                <li><a href="user_quiz.html">User Quiz</a></li>
+                                <li><a href="developer_quiz.html">Developer Quiz</a></li>
+                                <li><a href="developer advanced_quiz.html">Developer Advanced Quiz</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Tutorials and practical's</li>
-                                <li><a href="jr_beginner.html">Beginner</a></li>
-                                <li><a href="jr_intermediate.html">Essentials</a></li>
-                                <li><a href="jr_advanced.html">Advanced</a></li>
+                                <li><a href="jr_user.html">User</a></li>
+                                <li><a href="jr_developer.html">Essentials</a></li>
+                                <li><a href="jr_developer advanced.html">Developer Advanced</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
@@ -93,8 +93,8 @@
                         <ol type="A">
                             <li>Novice</li>
                             <li>Basic</li>
-                            <li>Intermediate</li>
-                            <li>Advanced</li>
+                            <li>Developer</li>
+                            <li>Developer Advanced</li>
                             <li>Expert</li>
                         </ol>
                     </li>
@@ -215,7 +215,7 @@
             </div>
             <br/>
             <div class="container">
-                <p><a class="btn btn-lg btn-success" href="jr_beginner.html" role="button">Beginner course</a></p>
+                <p><a class="btn btn-lg btn-success" href="jr_user.html" role="button">User course</a></p>
             </div>
             <div class="container">
             </div>
